apps/media/pinepods/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pinepods
  namespace: pinepods
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pinepods.internal.crussell.io`)
      kind: Rule
      services:
        - name: pinepods
          port: 8040
  tls:
    certResolver: letsencrypt
